Flare v1.12 (WIP)

Engine fixes:

* Fix memory leak of tab control in stash menu (MiroslavR)

Translation updates:

* German (de) update (Wuzzy2)
* Norwegian (nb) update (Elias Nykrem)
* Portuguese (pt) update (Rui)
* Russian (ru) update (Igor Polyakov)
* Slovak (sk) update (MiroslavR)



Flare v1.11 (http://flarerpg.org/index.php/2019/07/27/flare-1-11/)

Engine features:

* Players now have their own private stash in addition to the shared stash.
* Expanded the 'no_stash' Item variable to account for having multiple stashes.

Engine fixes:

* Fix bug where items could be dragged from the vendor window and dropped in the opposite vendor tab.
* Fix bug that caused item max_quantity to be reset when attempting to append an item definition.
* Fix bug where Powers with 'replace_by_effect' would still use properties from the parent power, such as animation state.

Game updates:

* Items that couldn't be stashed in the last update can now be put in the private stash.
* Salted Field: moved chest to the south end of the map to prevent easy farming.

Translation updates:

* Belarusian (be) update (Zmicer Turok)
* German (de) update (Wuzzy2)
* Hungarian (hu) by bzt
* Ukranian (uk) update (Igor Paliychuk)



Flare v1.10 (http://flarerpg.org/index.php/2019/05/17/flare-1-10/)

Engine features:

* The configuration menu has been redesigned and is now used as the pause menu.
* The interface features from version 1.09 have been reverted due to being accessible from the pause menu.
* Added an Interface option to disable showing hidden entity markers.
* Support floating point values for loot drop chance values.
* Add 'hide_timeout' option to stat bar configuration to support auto-hiding. (Leszek Cimała)
* Added an Interface option to disable stat bar auto-hiding globally.
* Add 'no_stash' property to item definitions to prevent items from being placed in the stash.
* Add low HP notification system. (Leszek Cimała)