@@ -54,6 +54,7 @@ public:
 		bool save_buyback;
 		bool keep_buyback_on_map_change;
 		std::string sfx_unable_to_cast;
+		bool combat_aborts_npc_interact;
 	};
 
 	class Resolutions {
